Humidifier on OH5.2
Changes to add the Midea humidifier to the Midea AC binding.

Signed-off-by: Bob Eckhoff <katmandodo@yahoo.com>