@@ -27,7 +27,7 @@ import org.openhab.core.thing.ThingTypeUID;
  * used across the whole binding.
  *
  * @author Jacek Dobrowolski - Initial contribution
- * @author Bob Eckhoff - OH naming conventions and capability properties
+ * @author Bob Eckhoff - OH naming conventions, capability properties and dehumidifier additions
  */
 @NonNullByDefault
 public class MideaACBindingConstants {
@@ -37,22 +37,34 @@ public class MideaACBindingConstants {
     /**
      * Thing Type
      */
-    public static final ThingTypeUID THING_TYPE_MIDEAAC = new ThingTypeUID(BINDING_ID, "ac");
+    public static final ThingTypeUID THING_TYPE_AC = new ThingTypeUID(BINDING_ID, "ac");
+    public static final ThingTypeUID THING_TYPE_DEHUMIDIFIER = new ThingTypeUID(BINDING_ID, "a1");
 
-    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES_UIDS = Collections.singleton(THING_TYPE_MIDEAAC);
+    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES_UIDS = Collections
+            .unmodifiableSet(Set.of(THING_TYPE_AC, THING_TYPE_DEHUMIDIFIER));
 
     /**
-     * List of all channel IDS
+     * List of all channel IDS for all Devices
      */
     public static final String CHANNEL_POWER = "power";
     public static final String CHANNEL_APPLIANCE_ERROR = "appliance-error";
     public static final String CHANNEL_TARGET_TEMPERATURE = "target-temperature";
     public static final String CHANNEL_OPERATIONAL_MODE = "operational-mode";
+    public static final String CHANNEL_DEHUMIDIFIER_MODE = "dehumidifier-mode";
     public static final String CHANNEL_FAN_SPEED = "fan-speed";
+    public static final String CHANNEL_DH_FAN_SPEED = "dh-fan-speed";
     public static final String CHANNEL_ON_TIMER = "on-timer";
     public static final String CHANNEL_OFF_TIMER = "off-timer";
     public static final String CHANNEL_SWING_MODE = "swing-mode";
+    public static final String CHANNEL_SWING_ANGLE_HORIZONAL = "swing-angle-horizontal";
+    public static final String CHANNEL_SWING_ANGLE_VERTICAL = "swing-angle-vertical";
+    public static final String CHANNEL_DEHUMIDIFIER_SWING = "dehumidifier-swing";
     public static final String CHANNEL_AUXILIARY_HEAT = "auxiliary-heat";
+    public static final String CHANNEL_PURIFIER_MODE = "purifier-mode";
+    public static final String CHANNEL_CHILD_LOCK = "child-lock";
+    public static final String CHANNEL_ANION = "anion";
+    public static final String CHANNEL_DEHUMIDIFIER_TANK = "dehumidifier-tank";
+    public static final String CHANNEL_DEHUMIDIFIER_TANK_SETPOINT = "dh-tank-setpoint";
     public static final String CHANNEL_ECO_MODE = "eco-mode";
     public static final String CHANNEL_TEMPERATURE_UNIT = "temperature-unit";
     public static final String CHANNEL_SLEEP_FUNCTION = "sleep-function";
@@ -75,11 +87,12 @@ public class MideaACBindingConstants {
     public static final String CHARSET = "US-ASCII";
 
     /**
-     * List of all AC thing properties
+     * List of all thing properties
      */
     public static final String CONFIG_IP_ADDRESS = "ipAddress";
     public static final String CONFIG_IP_PORT = "ipPort";
     public static final String CONFIG_DEVICEID = "deviceId";
+    public static final String CONFIG_DEVICE_TYPE = "deviceType";
     public static final String CONFIG_CLOUD = "cloud";
     public static final String CONFIG_EMAIL = "email";
     public static final String CONFIG_PASSWORD = "password";
@@ -96,15 +109,18 @@ public class MideaACBindingConstants {
     // Properties from LAN Discovery
     public static final String PROPERTY_SN = "sn";
     public static final String PROPERTY_SSID = "ssid";
-    public static final String PROPERTY_TYPE = "type";
 
     // Capabilities properties discoverable
     public static final String PROPERTY_ANION = "anion";
     public static final String PROPERTY_AUX_ELECTRIC_HEAT = "auxElectricHeat";
+    public static final String PROPERTY_AUX_MODE_AUTO = "auxModeAuto";
+    public static final String PROPERTY_AUX_MODE_ON = "auxModeOn";
+    public static final String PROPERTY_AUX_MODE_OFF = "auxModeOff";
     public static final String PROPERTY_BREEZE_AWAY = "breezeAway";
     public static final String PROPERTY_BREEZE_CONTROL = "breezeControl";
     public static final String PROPERTY_BREEZELESS = "breezeless";
     public static final String PROPERTY_BUZZER = "buzzer";
+    public static final String PROPERTY_CHILD_LOCK = "childLock";
     public static final String PROPERTY_DISPLAY_CONTROL = "displayControl";
     public static final String PROPERTY_ENERGY_STATS = "energyStats";
     public static final String PROPERTY_ENERGY_SETTING = "energySetting";
@@ -132,8 +148,10 @@ public class MideaACBindingConstants {
     public static final String PROPERTY_PRESET_IECO = "ieco";
     public static final String PROPERTY_PRESET_TURBO_COOL = "turboCool";
     public static final String PROPERTY_PRESET_TURBO_HEAT = "turboHeat";
+    public static final String PROPERTY_PURIFIER = "purifier";
     public static final String PROPERTY_RATE_SELECT = "rateSelect5Level";
     public static final String PROPERTY_SELF_CLEAN = "selfClean";
+    public static final String PROPERTY_SLEEP_MODE = "sleepMode";
     public static final String PROPERTY_SMART_EYE = "smartEye";
     public static final String PROPERTY_SWING_LR_ANGLE = "swingHorizontalAngle";
     public static final String PROPERTY_SWING_UD_ANGLE = "swingVerticalAngle";
